--- a/FAITEC/Alysson/Faitec/index.html
+++ b/FAITEC/Alysson/Faitec/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard</title>
+    <title>GamersBank - Home</title>
 
     <script src="resources/js/jquery/jquery-3.4.1.min.js"></script>
 
     <link href="resources/css/styles.css" rel="stylesheet" />
     <link href="resources/css/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="resources/css/estilo.css" rel="stylesheet">
     <script src="resources/js/font-awesome/all.min.js"></script>
 </head>
 
@@ -113,10 +114,36 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid">
-                    <h1 class="mt-4">Página Inicial</h1>
-                    <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item active">Home</li>
-                    </ol>
+                    <div class="row mb-4">
+                        <div class="col-md-2">
+                            <img style="width: 200px;" src="resources/assets/img/sasuke.jpg" class="img-thumbnail">
+                        </div>
+
+                        <div class="col-md-10">
+                            <h1 class="mt-4">Bem vindo, Davi</h1>
+                            <h3>Saldo: R$ 100,00</h3>
+                        </div>
+
+                    </div>
+
+                    
+
+                    
+
+                    <div class="row text-center">
+                        <div class="col-md-3">
+                            <button type="button" class="btn btn-primary quadrado"><i class="fas fa-random"></i> Transferir</button>
+                        </div>
+                        <div class="col-md-3">
+                            <button type="button" class="btn btn-primary quadrado"><i class="far fa-credit-card"></i> Cartão Crédito</button>
+                        </div>
+                        <div class="col-md-3">
+                            <button type="button" class="btn btn-primary quadrado"><i class="fas fa-money-bill"></i> Pix</button>
+                        </div>
+                        <div class="col-md-3">
+                            <button type="button" class="btn btn-primary quadrado"><i class="fas fa-gamepad"></i> Gamer</button>
+                        </div>
+                    </div>
 
 
 
@@ -129,15 +156,15 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="resources/assets/img/carrosel/car-1.jpg"
+                                    <img class="d-block " src="resources/assets/img/carrosel/car-1.jpg"
                                         alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="resources/assets/img/carrosel/car-2.jpg"
+                                    <img class="d-block " src="resources/assets/img/carrosel/car-2.jpg"
                                         alt="Second slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="resources/assets/img/carrosel/car-3.jpg"
+                                    <img class="d-block " src="resources/assets/img/carrosel/car-3.jpg"
                                         alt="Third slide">
                                 </div>
                             </div>
