--- a/FAITEC/Alysson/Faitec/extrato.html
+++ b/FAITEC/Alysson/Faitec/extrato.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>GamersBank - Transferência</title>
+    <title>GamersBank - Extrato</title>
 
     <script src="resources/js/jquery/jquery-3.4.1.min.js"></script>
 
@@ -123,35 +123,50 @@
                         </div>
 
                         <div class="col-md-10">
-                            <h1 class="mt-4">Transferir</h1>
+                            <h1 class="mt-4">Ver Extrato</h1>
                             <h3>Saldo: R$ 100,00</h3>
                         </div>
 
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-8">
-                            <form class="row g-2">
-                                <div class="col-5">
-                                  <label for="inputEmail4" class="form-label">Transferir para outra conta bancária</label>
-                                  <input type="email" class="form-control" id="inputEmail4" placeholder="ex: 12345">
+                        
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5> 20/03/2021 <span style="color: red;">-R$100,00</span></h5>
+                                  <p>Compra Kabum</p>
                                 </div>
-                                <div class="col-5">
-                                  <label for="inputAddress" class="form-label">Valor em Real</label>
-                                  <input type="text" class="form-control" id="inputAddress" placeholder="ex: 250">
-                                </div>
-                                <div class="col-5">
-                                  <label for="inputAddress2" class="form-label">Descrição</label>
-                                  <input type="text" class="form-control" id="inputAddress2" placeholder="pagamento pizza aquele dia">
-                                </div>
-                                <div class="col-12">
-                                  <button type="submit" class="btn btn-primary">Cancelar</button>
-                                  <button type="submit" class="btn btn-primary text-right">Transferir</button>
-                                </div>
-                              </form>
+                            </div>
                         </div>
-                        <div class="col-md-3"></div>
+
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5> 20/03/2021 <span style="color: green;">+R$100,00</span></h5>
+                                  <p>Transferência recebida 12324</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5> 20/03/2021 <span style="color: red;">-R$100,00</span></h5>
+                                  <p>Transferência enviada 12365</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5> 20/03/2021 <span style="color: green;">+R$100,00</span></h5>
+                                  <p>Transferência recebida 12324</p>
+                                </div>
+                            </div>
+                        </div>
+        
                     </div>
                 </div>
             </main>
