commit links pagina cartao de credito

--- a/FAITEC/Alysson/Faitec/game/game-list.html
+++ b/FAITEC/Alysson/Faitec/game/game-list.html
@@ -49,7 +49,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="login.html">Sair</a>
                 </div>
-            </li>
+            </li>   
         </ul>
 
     </nav>
@@ -59,7 +59,7 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Menu</div>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="../index.html">
                             <div class="sb-nav-link-icon">
                                 <i class="fas fa-tachometer-alt"></i>
                             </div>
