--- a/FAITEC/Alysson/Faitec/index.html
+++ b/FAITEC/Alysson/Faitec/index.html
@@ -138,22 +138,22 @@
                         <div class="col-md-6">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <button type="button" class="btn btn-primary quadrado"><i class="fas fa-random"></i> Transferência</button>
+                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Transferência</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <button type="button" class="btn btn-primary quadrado"><i class="far fa-credit-card"></i> Extrato</button>
+                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Extrato</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <button type="button" class="btn btn-primary quadrado"><i class="fas fa-piggy-bank"></i> Guardar Dinheiro</button>
+                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Guardar Dinheiro</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <button type="button" class="btn btn-primary quadrado"><i class="fas fa-hand-holding-usd"></i> Empréstimo</button>
+                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Empréstimo</a>
+                                </div>
+                                <div class="col-md-6">   
+                                    <a href="game/game-list.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Cartão de Crédito</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <button type="button" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Cartão de Crédito</button>
-                                </div>
-                                <div class="col-md-6">
-                                    <button type="button" class="btn btn-primary quadrado"><i class="fas fa-gamepad"></i> Rewards Gamer</button>
+                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Rewards Gamer</a>
                                 </div>
 
                             </div>
