--- a/FAITEC/Alysson/Faitec/account/register.html
+++ b/FAITEC/Alysson/Faitec/account/register.html
@@ -45,6 +45,10 @@
                                                 for="inputEmailAddress">Email</label><input class="form-control py-4"
                                                 id="inputEmailAddress" type="email" aria-describedby="emailHelp"
                                                 placeholder="Insira o endereço de email" /></div>
+                                        <div class="form-group"><label class="small mb-1"
+                                                for="inputCPFAddress">CPF</label><input class="form-control py-4"
+                                                id="inputCPFAddress" type="" aria-describedby="emailHelp"
+                                                placeholder="Insira o CPF" /></div>
                                         <div class="form-row">
                                             <div class="col-md-6">
                                                 <div class="form-group"><label class="small mb-1"
