--- a/FAITEC/Alysson/Faitec/game/game-detail.html
+++ b/FAITEC/Alysson/Faitec/game/game-detail.html
@@ -56,7 +56,7 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Menu</div>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="../index.html">
                             <div class="sb-nav-link-icon">
                                 <i class="fas fa-tachometer-alt"></i>
                             </div>
@@ -77,25 +77,25 @@
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="game/game-list.html">Cartão de Crédito</a>
+                                <a class="nav-link" href="../game/game-list.html">Cartão de Crédito</a>
                             </nav>
                         </div>
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="game/game-beneficio.html">Benefícios</a>
+                                <a class="nav-link" href="../game/game-beneficio.html">Benefícios</a>
                             </nav>
                         </div>
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="game/game-list.html">Pix</a>
+                                <a class="nav-link" href="../game/game-pix.html">Pix</a>
                             </nav>
                         </div>
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="game/game-list.html">Suporte</a>
+                                <a class="nav-link" href="../game/game-suporte.html">Suporte</a>
                             </nav>
                         </div>
                     </div>
