--- a/FAITEC/Alysson/Faitec/game/game-pix.html
+++ b/FAITEC/Alysson/Faitec/game/game-pix.html
@@ -80,25 +80,25 @@
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="game/game-list.html">Cartão de Crédito</a>
+                                <a class="nav-link" href="../game/game-list.html">Cartão de Crédito</a>
                             </nav>
                         </div>
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="game/game-beneficio.html">Benefícios</a>
+                                <a class="nav-link" href="../game/game-beneficio.html">Benefícios</a>
                             </nav>
                         </div>
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                         data-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="game/game-pix.html">Pix</a>
+                            <a class="nav-link" href="../game/game-pix.html">Pix</a>
                         </nav>
                     </div>
                     <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                     data-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="game/game-list.html">Suporte</a>
+                        <a class="nav-link" href="../game/game-suporte.html">Suporte</a>
                     </nav>
                 </div>
                     </div>
