--- a/FAITEC/Alysson/Faitec/game/game-suporte.html
+++ b/FAITEC/Alysson/Faitec/game/game-suporte.html
@@ -127,7 +127,7 @@
                             <div class="h-100 card bg-dark text-light">
                                 <div class="card-title text-center mt-1">Auto Atendimento</div>
                                 <div class="card-body text-center no-padding">
-                                    <a href="../game/game-detail.html">
+                                    <a href="../chatbot/chatbot.html">
                                         <img src="../resources/assets/img/autoatendimento.jpg"
                                             class="img-fluid" />
                                     </a>
