--- a/FAITEC/Alysson/Faitec/game/extrato.html
+++ b/FAITEC/Alysson/Faitec/game/extrato.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>GamersBank - Guardar Dinheiro</title>
+    <title>GamersBank - Extrato</title>
 
-    <script src="resources/js/jquery/jquery-3.4.1.min.js"></script>
-
-    <link href="resources/css/styles.css" rel="stylesheet" />
-    <link href="resources/css/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    <link href="resources/css/estilo.css" rel="stylesheet">
-    <script src="resources/js/font-awesome/all.min.js"></script>
+    <script src="../resources/js/jquery/jquery-3.4.1.min.js"></script>
+   
+    <link href="../resources/css/styles.css" rel="stylesheet" />
+    <link href="../resources/css/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="../resources/css/estilo.css" rel="stylesheet">
+    <script src="../resources/js/font-awesome/all.min.js"></script>
 </head>
 
 <body class="sb-nav-fixed">
@@ -119,11 +119,11 @@
                 <div class="container-fluid">
                     <div class="row mb-4">
                         <div class="col-md-2">
-                            <img style="width: 200px;" src="resources/assets/img/sasuke.jpg" class="img-thumbnail">
+                            <img style="width: 200px;" src="../resources/assets/img/sasuke.jpg" class="img-thumbnail">
                         </div>
 
                         <div class="col-md-10">
-                            <h1 class="mt-4">Guardar Dinheiro</h1>
+                            <h1 class="mt-4">Ver Extrato</h1>
                             <h3>Saldo: R$ 100,00</h3>
                         </div>
 
@@ -131,42 +131,41 @@
 
                     <div class="row">
                         
-                        <table class="table">
-                            <thead>
-                              <tr>
-                                <th scope="col">Categoria</th>
-                                <th scope="col">Valor</th>
-                                <th scope="col">Guardar</th>
-                                <th scope="col">Resgatar</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr>
-                                <td>Viagem</td>
-                                <td>R$ 200,00</td>
-                                <td><button type="button" class="btn btn-success"><i class="fas fa-piggy-bank"></i> Guardar</button></td>
-                                <td><button type="button" class="btn btn-success"><i class="fas fa-hand-holding-usd"></i> Resgatar</button></td>
-                              </tr>
-                              <tr>
-                                <td>Viagem</td>
-                                <td>R$ 200,00</td>
-                                <td><button type="button" class="btn btn-success"><i class="fas fa-piggy-bank"></i> Guardar</button></td>
-                                <td><button type="button" class="btn btn-success"><i class="fas fa-hand-holding-usd"></i> Resgatar</button></td>
-                              </tr>
-                              <tr>
-                                <td>Viagem</td>
-                                <td>R$ 200,00</td>
-                                <td><button type="button" class="btn btn-success"><i class="fas fa-piggy-bank"></i> Guardar</button></td>
-                                <td><button type="button" class="btn btn-success"><i class="fas fa-hand-holding-usd"></i> Resgatar</button></td>
-                              </tr>
-                              <tr>
-                                <td><button type="button" class="btn btn-primary"><i class="fas fa-plus"></i> Nova Categoria</button></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                              </tr>
-                            </tbody>
-                          </table>
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5> 20/03/2021 <span style="color: red;">-R$100,00</span></h5>
+                                  <p>Compra Kabum</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5> 20/03/2021 <span style="color: green;">+R$100,00</span></h5>
+                                  <p>Transferência recebida 12324</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5> 20/03/2021 <span style="color: red;">-R$100,00</span></h5>
+                                  <p>Transferência enviada 12365</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5> 20/03/2021 <span style="color: green;">+R$100,00</span></h5>
+                                  <p>Transferência recebida 12324</p>
+                                </div>
+                            </div>
+                        </div>
         
                     </div>
                 </div>
@@ -186,12 +185,12 @@
         </div>
     </div>
 
-    <script src="resources/js/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="resources/js/scripts.js"></script>
+    <script src="../resources/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../resources/js/scripts.js"></script>
 
-    <script src="resources/js/datatable/jquery.dataTables.min.js"></script>
-    <script src="resources/js/datatable/dataTables.bootstrap4.min.js"></script>
-    <script src="resources/assets/demo/datatables-init.js"></script>
+    <script src="../resources/js/datatable/jquery.dataTables.min.js"></script>
+    <script src="../resources/js/datatable/dataTables.bootstrap4.min.js"></script>
+    <script src="../resources/assets/demo/datatables-init.js"></script>
 </body>
 
 </html>
