--- a/FAITEC/Alysson/Faitec/index.html
+++ b/FAITEC/Alysson/Faitec/index.html
@@ -10,7 +10,7 @@
     <title>GamersBank - Home</title>
 
     <script src="resources/js/jquery/jquery-3.4.1.min.js"></script>
-
+    <link rel="shortcut icon" href="resources/assets/img/icone.png">
     <link href="resources/css/styles.css" rel="stylesheet" />
     <link href="resources/css/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="resources/css/estilo.css" rel="stylesheet">
@@ -138,13 +138,13 @@
                         <div class="col-md-6">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Transferência</a>
+                                    <a href="game/transferencia.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Transferencia</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Extrato</a>
+                                    <a href="game/extrato.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Extrato</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Guardar Dinheiro</a>
+                                    <a href="game/guardar-dinheiro.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Guardar Dinheiro</a>
                                 </div>
                                 <div class="col-md-6">
                                     <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Empréstimo</a>
