--- a/FAITEC/Alysson/Faitec/index.html
+++ b/FAITEC/Alysson/Faitec/index.html
@@ -45,8 +45,10 @@
                     <i class="fas fa-user fa-fw"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="account/login.html"><i class="fas fa-wrench"></i> Editar Perfil</a>
+                    <a class="dropdown-item" href="account/login.html"><i class="fas fa-user"></i> Login</a>
 
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="account/login.html"><i class="fas fa-wrench"></i>  Perfil</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#"><i class="fas fa-user-slash"></i> Cancelar Conta</a>
 
@@ -123,7 +125,7 @@
                         </div>
 
                         <div class="col-md-10">
-                            <h1 class="mt-4">Bem vindo, Davi</h1>
+                            <h1 class="mt-4">Bem vindo, Gamer</h1>
                             <h3>Saldo: R$ 100,00</h3>
                         </div>
 
