incorporando cartao de credito / fatura 2

--- a/FAITEC/Alysson/Faitec/game/cartao-de-credito.html
+++ b/FAITEC/Alysson/Faitec/game/cartao-de-credito.html
@@ -129,7 +129,7 @@
 
                         <div class="col-md-6">
                             <div class="sleeve">
-                                <div class="credit-card selected" style="background: rgb(185, 27, 27)">
+                                <div class="credit-card selected">
                                   <div class="card-company">GamersBank Credit Card</div>
                                   <div class="card-number">
                                     <div class="digit-group">4234 1302 3798 0265</div>
